# image_recognition

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  tauri.conf.json
.claude/commands/: inst.md
src/: capture.rs  main.rs  main_capture_test.rs  main_combined_test.rs  main_ocr_test.rs  monitor.rs  ocr.rs
